CI: replace yadifa with a custom server
YADIFA is currently broken on Ubuntu, and we had run into some
limitations with it anyway.

For the SPF tests, drop all references to the long-deprecated SPF
record type which simta never used. This was already a todo and makes
the new implementation easier.

--- a/.github/workflows/build-dist.yml
+++ b/.github/workflows/build-dist.yml
@@ -17,7 +17,7 @@ jobs:
         run: sudo apt update
 
       - name: Install dependencies
-        run: sudo apt install libbsd-dev libmilter-dev libjemalloc-dev libssl-dev liblmdb-dev libldap2-dev libopendkim-dev libidn2-dev libsasl2-dev libsasl2-modules-db sasl2-bin libcmocka-dev yadifa slapd ldap-utils lcov
+        run: sudo apt install libbsd-dev libmilter-dev libjemalloc-dev libssl-dev liblmdb-dev libldap2-dev libopendkim-dev libidn2-dev libsasl2-dev libsasl2-modules-db sasl2-bin
 
       - name: Cache built dependencies
         uses: actions/cache@v4
