CI: use local action for GHA as well
This was only separate because I didn't know about the ability to use
local actions. Well, now I do.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,19 +66,19 @@ jobs:
         if: steps.cache-deps.outputs.cache-hit != 'true'
 
       - name: Build denser
-        uses: flowerysong/gh-build-deb@v1
+        uses: ./simta/.github/actions/build-deb
         with:
           src: https://github.com/simta/denser
         if: steps.cache-deps.outputs.cache-hit != 'true'
 
       - name: Build libucl
-        uses: flowerysong/gh-build-deb@v1
+        uses: ./simta/.github/actions/build-deb
         with:
           src: https://github.com/vstakhov/libucl
         if: steps.cache-deps.outputs.cache-hit != 'true'
 
       - name: Build OpenARC
-        uses: flowerysong/gh-build-deb@v1
+        uses: ./simta/.github/actions/build-deb
         with:
           src: https://github.com/flowerysong/OpenARC
         if: steps.cache-deps.outputs.cache-hit != 'true'
