Add experimental mimalloc support

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,6 +9,7 @@ COMMON_LIBS = \
 	@LIBSASL_LIBS@ \
 	@LIBSSL_LIBS@ \
 	@LIBUCL_LIBS@ \
+	@MIMALLOC_LIBS@ \
 	@OPENARC_LIBS@ \
 	@OPENDKIM_LIBS@ \
 	@EXTRALIBS@
@@ -23,6 +24,7 @@ AM_CPPFLAGS = \
 	@LIBSSL_CFLAGS@ \
 	@LIBUCL_CFLAGS@ \
 	@LIBWRAP_CPPFLAGS@ \
+	@MIMALLOC_CFLAGS@ \
 	@OPENARC_CFLAGS@ \
 	@OPENDKIM_CFLAGS@
 
