--- a/.github/workflows/build-dist.yml
+++ b/.github/workflows/build-dist.yml
@@ -56,4 +56,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: dist
-          path: ${{ github.workspace }}/simta/simta-*.tar.xz
+          path: ${{ github.workspace }}/simta/simta-*.tar.zst
