--- a/packaging/rpm/simta.spec.in
+++ b/packaging/rpm/simta.spec.in
@@ -15,7 +15,7 @@ Version: @PACKAGE_VERSION@
 Release: 1%{?dist}
 License: BSD and MIT
 URL: http://rsug.itd.umich.edu/software/simta/
-Source0: %{name}-%{version}.tar.xz
+Source0: %{name}-%{version}.tar.zst
 Provides: MTA smtpdaemon server(smtp)
 Provides: %{_sbindir}/sendmail %{_bindir}/newaliases
 BuildRequires: libucl-devel >= 0.8.1
