Add config flag to control whether CNAMEs can be MXen
Given that delivery from Google allows this, it's very difficult to
make people care about the fact that their DNS entry is technically
invalid. So let's just make it valid.

--- a/simta.conf
+++ b/simta.conf
@@ -323,6 +323,12 @@ deliver {
         # alternate recipient for bounces of old jailed messages
         #parole_officer = npno@example.com
     }
+    dns {
+        # This is explicitly disallowed by the RFCs, but Google doesn't seem
+        # to care and like a lot of decisions prompted by worries about
+        # excessive DNS queries it feels very dated.
+        permit_mx_cnames = true;
+    }
     dkim {
         enabled = false;
         domain = $HOSTNAME;
